[package]
name = "program-artifacts"
version = "0.1.27"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.10.29"
borsh = "0.9.3"
solana-web3-rust = { git = "https://github.com/ticketland-io/solana-web3-rust", version = "0.1.9" }
eyre = "0.6.8"
